PCHR-1158: Fixing the broken style on SSP reports page

--- a/civihr_default_theme/assets/sass/civihr_default/_custom.scss
+++ b/civihr_default_theme/assets/sass/civihr_default/_custom.scss
@@ -1045,3 +1045,21 @@ form {
 .jcarousel-container [disabled] {
     display: none;
 }
+
+/* Styling the exposed filters on reports page. */
+@media (min-width: 768px) {
+  #edit-absence-date-filter-wrapper, #edit-between-date-filter-wrapper {
+    .form-inline {
+      .form-control {
+        display: inline-block;
+        width: auto;
+        vertical-align: middle;
+      }
+      .form-group {
+        display: inline-block;
+        margin-bottom: 0;
+        vertical-align: middle;
+      }
+    }
+  }
+}
